--- a/docs/_r/R-3.6.1-foss-2016b-fh1.md
+++ b/docs/_r/R-3.6.1-foss-2016b-fh1.md
@@ -1,6 +1,6 @@
 ---
 title: R-3.6.1-foss-2016b-fh1
-date: 2019-08-12
+date: 2019-10-09
 ---
 
 ### Known Issues
@@ -48,6 +48,7 @@ Statistics
 High-Quality Bitmap (PNG, JPEG, TIFF), Vector (PDF, SVG,
 PostScript) and Display (X11 and Win32) Output
   * [Category-2.50.0](https://www.bioconductor.org/packages/release/bioc/html/Category.html) Category Analysis
+  * [ChIPpeakAnno-3.18.2](https://www.bioconductor.org/packages/release/bioc/html/ChIPpeakAnno.html) Batch annotation of the peaks identified from either ChIP-seq, ChIP-chip experiments or any experiments resulted in large number of chromosome ranges
   * [ComICS-1.0.4](https://cran.r-project.org/web/packages/ComICS/index.html) Computational Methods for Immune Cell-Type Subsets
   * [CompQuadForm-1.4.3](https://cran.r-project.org/web/packages/CompQuadForm/index.html) Distribution Function of Quadratic Forms in Normal Variables
   * [DAAG-1.22.1](https://cran.r-project.org/web/packages/DAAG/index.html) Data Analysis and Graphics Data and Functions
@@ -61,8 +62,8 @@ Regression Models
   * [DNAcopy-1.58.0](https://www.bioconductor.org/packages/release/bioc/html/DNAcopy.html) DNA copy number data analysis
   * [DRR-0.0.3](https://cran.r-project.org/web/packages/DRR/index.html) Dimensionality Reduction via Regression
   * [DT-0.7](https://cran.r-project.org/web/packages/DT/index.html) A Wrapper of the JavaScript Library 'DataTables'
-  * [DTRreg-1.3](https://cran.r-project.org/web/packages/DTRreg/index.html) DTR Estimation and Inference via G-Estimation, Dynamic WOLS, and
-Q-Learning
+  * [DTRreg-1.3](https://cran.r-project.org/web/packages/DTRreg/index.html) DTR Estimation and Inference via G-Estimation, Dynamic WOLS,
+Q-Learning, and Dynamic Weighted Survival Modeling (DWSurv)
   * [DelayedArray-0.10.0](https://www.bioconductor.org/packages/release/bioc/html/DelayedArray.html) A unified framework for working transparently with on-disk and in-memory array-like datasets
   * [DelayedMatrixStats-1.6.0](https://www.bioconductor.org/packages/release/bioc/html/DelayedMatrixStats.html) Functions that Apply to Rows and Columns of 'DelayedMatrix' Objects
   * [Deriv-3.8.5](https://cran.r-project.org/web/packages/Deriv/index.html) Symbolic Differentiation
@@ -108,12 +109,14 @@ Model
   * HCsnip 1.2.0
   * [HDF5Array-1.12.1](https://www.bioconductor.org/packages/release/bioc/html/HDF5Array.html) HDF5 backend for DelayedArray objects
   * [HMMcopy-1.26.0](https://www.bioconductor.org/packages/release/bioc/html/HMMcopy.html) Copy number prediction with correction for GC and mappability bias for HTS data
+  * [HSMMSingleCell-1.4.0](https://www.bioconductor.org/packages/release/bioc/html/HSMMSingleCell.html) Single-cell RNA-Seq for differentiating human skeletal muscle myoblasts (HSMM)
   * [HWxtest-1.1.9](https://cran.r-project.org/web/packages/HWxtest/index.html) Exact Tests for Hardy-Weinberg Proportions
   * [HaploSim-1.8.4](https://cran.r-project.org/web/packages/HaploSim/index.html) Functions to simulate haplotypes
   * [Hmisc-4.2-0](https://cran.r-project.org/web/packages/Hmisc/index.html) Harrell Miscellaneous
   * [Homo.sapiens-1.3.1](https://www.bioconductor.org/packages/release/bioc/html/Homo.sapiens.html) Annotation package for the Homo.sapiens object
   * [IDPmisc-1.1.19](https://cran.r-project.org/web/packages/IDPmisc/index.html) 'Utilities of Institute of Data Analyses and Process Design
 (www.zhaw.ch/idp)'
+  * [IDSpatialStats-0.3.5](https://cran.r-project.org/web/packages/IDSpatialStats/index.html) Estimate Global Clustering in Infectious Disease
   * [IHW-1.12.0](https://www.bioconductor.org/packages/release/bioc/html/IHW.html) Independent Hypothesis Weighting
   * [IRanges-2.18.1](https://www.bioconductor.org/packages/release/bioc/html/IRanges.html) Foundation of integer range manipulation in Bioconductor
   * [IRdisplay-0.7.0](https://cran.r-project.org/web/packages/IRdisplay/index.html) 'Jupyter' Display Machinery
@@ -141,6 +144,9 @@ Buttlar
   * [Matching-4.9-6](https://cran.r-project.org/web/packages/Matching/index.html) Multivariate and Propensity Score Matching with Balance
 Optimization
   * [Matrix-1.2-17](https://cran.r-project.org/web/packages/Matrix/index.html) Sparse and Dense Matrix Classes and Methods
+  * [Matrix.utils-0.9.7](https://cran.r-project.org/web/packages/Matrix.utils/index.html) Data.frame-Like Operations on Sparse and Dense Matrix Objects
+  * [MatrixEQTL-2.2](https://cran.r-project.org/web/packages/MatrixEQTL/index.html) Matrix eQTL: Ultra Fast eQTL Analysis via Large Matrix
+Operations
   * [MatrixModels-0.4-1](https://cran.r-project.org/web/packages/MatrixModels/index.html) Modelling with Sparse And Dense Matrices
   * [Mfuzz-2.44.0](https://www.bioconductor.org/packages/release/bioc/html/Mfuzz.html) Soft clustering of time series gene expression data
   * [ModelMetrics-1.2.2](https://cran.r-project.org/web/packages/ModelMetrics/index.html) Rapid Calculation of Model Metrics
@@ -202,6 +208,8 @@ Models
   * [RWeka-0.4-40](https://cran.r-project.org/web/packages/RWeka/index.html) R/Weka Interface
   * [RWekajars-3.9.3-1](https://cran.r-project.org/web/packages/RWekajars/index.html) R/Weka Interface Jars
   * [Rcpp-1.0.1](https://cran.r-project.org/web/packages/Rcpp/index.html) Seamless R and C++ Integration
+  * [RcppAnnoy-0.0.12](https://cran.r-project.org/web/packages/RcppAnnoy/index.html) 'Rcpp' Bindings for 'Annoy', a Library for Approximate Nearest
+Neighbors
   * [RcppArmadillo-0.9.500.2.0](https://cran.r-project.org/web/packages/RcppArmadillo/index.html) 'Rcpp' Integration for the 'Armadillo' Templated Linear Algebra
 Library
   * [RcppEigen-0.3.3.5.0](https://cran.r-project.org/web/packages/RcppEigen/index.html) 'Rcpp' Integration for the 'Eigen' Templated Linear Algebra
@@ -217,6 +225,7 @@ Packages
   * [Rgraphviz-2.28.0](https://cran.r-project.org/web/packages/Rgraphviz/index.html) Provides plotting capabilities for R graph objects
   * [Rhdf5lib-1.6.0](https://www.bioconductor.org/packages/release/bioc/html/Rhdf5lib.html) hdf5 library as an R package
   * [Rhpc-0.18-204](https://cran.r-project.org/web/packages/Rhpc/index.html) Permits *apply() Style Dispatch for 'HPC'
+  * [RhpcBLASctl-0.18-205](https://cran.r-project.org/web/packages/RhpcBLASctl/index.html) Control the Number of Threads on 'BLAS'
   * [Rhtslib-1.16.1](https://www.bioconductor.org/packages/release/bioc/html/Rhtslib.html) HTSlib high-throughput sequencing library as an R package
   * [Ringo-1.48.0](https://www.bioconductor.org/packages/release/bioc/html/Ringo.html) R Investigation of ChIP-chip Oligoarrays
   * [Rlabkey-2.3.0](https://cran.r-project.org/web/packages/Rlabkey/index.html) Data Exchange Between R and 'LabKey' Server
@@ -239,8 +248,10 @@ associated with species distribution modelling exercises
 Algorithms
   * [SeqArray-1.24.1](https://www.bioconductor.org/packages/release/bioc/html/SeqArray.html) Data Management of Large-scale Whole-genome Sequence Variant Calls
   * [SeqVarTools-1.22.0](https://www.bioconductor.org/packages/release/bioc/html/SeqVarTools.html) Tools for variant data
+  * [Seurat-3.1.1](https://cran.r-project.org/web/packages/Seurat/index.html) Tools for Single Cell Genomics
   * [ShortRead-1.42.0](https://www.bioconductor.org/packages/release/bioc/html/ShortRead.html) FASTQ input and manipulation
   * [SimSeq-1.4.0](https://cran.r-project.org/web/packages/SimSeq/index.html) Nonparametric Simulation of RNA-Seq Data
+  * [SingleCellExperiment-1.6.0](https://www.bioconductor.org/packages/release/bioc/html/SingleCellExperiment.html) S4 Classes for Single Cell Data
   * [SnowballC-0.6.0](https://cran.r-project.org/web/packages/SnowballC/index.html) Snowball Stemmers Based on the C 'libstemmer' UTF-8 Library
   * [SparseM-1.77](https://cran.r-project.org/web/packages/SparseM/index.html) Sparse Linear Algebra
   * [StanHeaders-2.18.1-10](https://cran.r-project.org/web/packages/StanHeaders/index.html) C++ Header Files for Stan
@@ -434,6 +445,7 @@ Information from an Object
   * [distrEx-2.8.0](https://cran.r-project.org/web/packages/distrEx/index.html) Extensions of Package 'distr'
   * [diveRsity-1.9.90](https://cran.r-project.org/web/packages/diveRsity/index.html) A Comprehensive, General Purpose Population Genetics Analysis
 Package
+  * [doBy-4.6-2](https://cran.r-project.org/web/packages/doBy/index.html) Groupwise Statistics, LSmeans, Linear Contrasts, Utilities
   * [doMC-1.3.5](https://cran.r-project.org/web/packages/doMC/index.html) Foreach Parallel Adaptor for 'parallel'
   * [doMPI-0.2.2](https://cran.r-project.org/web/packages/doMPI/index.html) Foreach Parallel Adaptor for the Rmpi Package
   * [doParallel-1.0.14](https://cran.r-project.org/web/packages/doParallel/index.html) Foreach Parallel Adaptor for the 'parallel' Package
@@ -442,6 +454,7 @@ Package
   * [dotCall64-1.0-0](https://cran.r-project.org/web/packages/dotCall64/index.html) Enhanced Foreign Function Interface Supporting Long Vectors
   * [downloader-0.4](https://cran.r-project.org/web/packages/downloader/index.html) Download Files over HTTP and HTTPS
   * [dplyr-0.8.3](https://cran.r-project.org/web/packages/dplyr/index.html) A Grammar of Data Manipulation
+  * [dqrng-0.2.1](https://cran.r-project.org/web/packages/dqrng/index.html) Fast Pseudo Random Number Generators
   * [dtangle-0.3.1](https://cran.r-project.org/web/packages/dtangle/index.html) Cell Type Deconvolution from Gene Expressions
   * [dtw-1.20-1](https://cran.r-project.org/web/packages/dtw/index.html) Dynamic Time Warping Algorithms
   * [dummies-1.5.6](https://cran.r-project.org/web/packages/dummies/index.html) Create dummy/indicator variables flexibly and efficiently
@@ -519,6 +532,7 @@ Makridakis, Wheelwright & Hyndman (1998)
   * [futile.logger-1.4.3](https://cran.r-project.org/web/packages/futile.logger/index.html) A Logging Utility for R
   * [futile.options-1.0.1](https://cran.r-project.org/web/packages/futile.options/index.html) Futile Options Management
   * [future-1.14.0](https://cran.r-project.org/web/packages/future/index.html) Unified Parallel and Distributed Processing in R for Everyone
+  * [future.apply-1.3.0](https://cran.r-project.org/web/packages/future.apply/index.html) Apply Function to Elements in Parallel using Futures
   * [gage-2.34.0](https://www.bioconductor.org/packages/release/bioc/html/gage.html) Generally Applicable Gene-set Enrichment for Pathway Analysis
   * [gam-1.16.1](https://cran.r-project.org/web/packages/gam/index.html) Generalized Additive Models
   * [gamlss-5.1-4](https://cran.r-project.org/web/packages/gamlss/index.html) Generalised Additive Models for Location Scale and Shape
@@ -590,6 +604,7 @@ Likelihood
   * [gridExtra-2.3](https://cran.r-project.org/web/packages/gridExtra/index.html) Miscellaneous Functions for "Grid" Graphics
   * [grpreg-3.2-1](https://cran.r-project.org/web/packages/grpreg/index.html) Regularization Paths for Regression Models with Grouped
 Covariates
+  * [grr-0.9.5](https://cran.r-project.org/web/packages/grr/index.html) Alternative Implementations of Base R Functions
   * [gsalib-2.1](https://cran.r-project.org/web/packages/gsalib/index.html) Utility Functions For GATK
   * [gsl-2.1-6](https://cran.r-project.org/web/packages/gsl/index.html) Wrapper for the Gnu Scientific Library
   * [gsubfn-0.7](https://cran.r-project.org/web/packages/gsubfn/index.html) Utilities for Strings and Function Arguments
@@ -664,7 +679,8 @@ Monte Carlo Studies
   * [lars-1.2](https://cran.r-project.org/web/packages/lars/index.html) Least Angle Regression, Lasso and Forward Stagewise
   * [lasso2-1.2-20](https://cran.r-project.org/web/packages/lasso2/index.html) L1 Constrained Estimation aka `lasso'
   * [latentnet-2.9.0](https://cran.r-project.org/web/packages/latentnet/index.html) Latent Position and Cluster Models for Statistical Networks
-  * [later-0.8.0](https://cran.r-project.org/web/packages/later/index.html) Utilities for Delaying Function Execution
+  * [later-0.8.0](https://cran.r-project.org/web/packages/later/index.html) Utilities for Scheduling Functions to Execute Later with Event
+Loops
   * [lattice-0.20-38](https://cran.r-project.org/web/packages/lattice/index.html) Trellis Graphics for R
   * [latticeExtra-0.6-28](https://cran.r-project.org/web/packages/latticeExtra/index.html) Extra Graphical Utilities Based on Lattice
   * [lava-1.6.5](https://cran.r-project.org/web/packages/lava/index.html) Latent Variable Models
@@ -672,6 +688,7 @@ Monte Carlo Studies
   * [lazy-1.2-16](https://cran.r-project.org/web/packages/lazy/index.html) Lazy Learning for Local Regression
   * [lazyeval-0.2.2](https://cran.r-project.org/web/packages/lazyeval/index.html) Lazy (Non-Standard) Evaluation
   * [leaps-3.0](https://cran.r-project.org/web/packages/leaps/index.html) Regression Subset Selection
+  * [leiden-0.3.1](https://cran.r-project.org/web/packages/leiden/index.html) R Implementation of Leiden Clustering Algorithm
   * [lhs-1.0.1](https://cran.r-project.org/web/packages/lhs/index.html) Latin Hypercube Samples
   * [libcoin-1.0-4](https://cran.r-project.org/web/packages/libcoin/index.html) Linear Test Statistics for Permutation Inference
   * [limSolve-1.5.5.3](https://cran.r-project.org/web/packages/limSolve/index.html) Solving Linear Inverse Models
@@ -755,6 +772,7 @@ Algorithm Found in MINPACK, Plus Support for Bounds
   * [modeltools-0.2-22](https://cran.r-project.org/web/packages/modeltools/index.html) Tools and Classes for Statistical Models
   * [moments-0.14](https://cran.r-project.org/web/packages/moments/index.html) Moments, cumulants, skewness, kurtosis and related tests
   * [mondate-0.10.01.02](https://cran.r-project.org/web/packages/mondate/index.html) Keep track of dates in terms of months
+  * monocle3 0.1.3
   * [mpath-0.3-15](https://cran.r-project.org/web/packages/mpath/index.html) Regularized Linear Models
   * [msa-1.16.0](https://www.bioconductor.org/packages/release/bioc/html/msa.html) Multiple Sequence Alignment
   * [msm-1.6.7](https://cran.r-project.org/web/packages/msm/index.html) Multi-State Markov and Hidden Markov Models in Continuous Time
@@ -815,6 +833,7 @@ Dependencies
   * [pbivnorm-0.6.0](https://cran.r-project.org/web/packages/pbivnorm/index.html) Vectorized Bivariate Normal CDF
   * [pbkrtest-0.4-7](https://cran.r-project.org/web/packages/pbkrtest/index.html) Parametric Bootstrap and Kenward Roger Based Methods for Mixed
 Model Comparison
+  * [pbmcapply-1.5.0](https://cran.r-project.org/web/packages/pbmcapply/index.html) Tracking the Progress of Mc*pply with Progress Bar
   * [pbs-1.1](https://cran.r-project.org/web/packages/pbs/index.html) Periodic B Splines
   * [pcaMethods-1.76.0](https://www.bioconductor.org/packages/release/bioc/html/pcaMethods.html) A collection of PCA methods
   * [pcaPP-1.9-73](https://cran.r-project.org/web/packages/pcaPP/index.html) Robust PCA by Projection Pursuit
@@ -908,10 +927,13 @@ and Logs
   * [readr-1.3.1](https://cran.r-project.org/web/packages/readr/index.html) Read Rectangular Text Data
   * [readxl-1.3.1](https://cran.r-project.org/web/packages/readxl/index.html) Read Excel Files
   * [recipes-0.1.6](https://cran.r-project.org/web/packages/recipes/index.html) Preprocessing Tools to Create Design Matrices
+  * [refGenome-1.7.7](https://cran.r-project.org/web/packages/refGenome/index.html) Gene and Splice Site Annotation Using Annotation Data from
+'Ensembl' and 'UCSC' Genome Browsers
   * [refund-0.1-17](https://cran.r-project.org/web/packages/refund/index.html) Regression with Functional Data
+  * [regioneR-1.16.2](https://www.bioconductor.org/packages/release/bioc/html/regioneR.html) Association analysis of genomic regions based on permutation tests
   * [registry-0.5-1](https://cran.r-project.org/web/packages/registry/index.html) Infrastructure for R Package Registries
   * [regress-1.3-15](https://cran.r-project.org/web/packages/regress/index.html) Gaussian Linear Models with Linear Covariance Structure
-  * [regtools-1.0.1](https://cran.r-project.org/web/packages/regtools/index.html) Regression Tools
+  * [regtools-1.0.1](https://cran.r-project.org/web/packages/regtools/index.html) Regression and Classification Tools
   * [relations-0.6-8](https://cran.r-project.org/web/packages/relations/index.html) Data Structures and Algorithms for Relations
   * [relevent-1.0-4](https://cran.r-project.org/web/packages/relevent/index.html) Relational Event Models
   * [rematch-1.0.1](https://cran.r-project.org/web/packages/rematch/index.html) Match Regular Expressions with a Nicer 'API'
@@ -958,6 +980,7 @@ Applications
   * [rstanarm-2.18.2](https://cran.r-project.org/web/packages/rstanarm/index.html) Bayesian Applied Regression Modeling via Stan
   * [rstantools-1.5.1](https://cran.r-project.org/web/packages/rstantools/index.html) Tools for Developing R Packages Interfacing with 'Stan'
   * [rstudioapi-0.10](https://cran.r-project.org/web/packages/rstudioapi/index.html) Safely Access the RStudio API
+  * [rsvd-1.0.2](https://cran.r-project.org/web/packages/rsvd/index.html) Randomized Singular Value Decomposition
   * [rtracklayer-1.44.0](https://www.bioconductor.org/packages/release/bioc/html/rtracklayer.html) R interface to genome annotation files and the UCSC genome browser
   * [rvcheck-0.1.3](https://cran.r-project.org/web/packages/rvcheck/index.html) R/Package Version Check
   * [rversions-2.0.0](https://cran.r-project.org/web/packages/rversions/index.html) Query 'R' Versions, Including 'r-release' and 'r-oldrel'
@@ -969,6 +992,7 @@ Applications
   * [scatterplot3d-0.3-41](https://cran.r-project.org/web/packages/scatterplot3d/index.html) 3D Scatter Plot
   * [scidb-2.0.0](https://cran.r-project.org/web/packages/scidb/index.html) An R Interface to SciDB
   * [scrime-1.3.5](https://cran.r-project.org/web/packages/scrime/index.html) Analysis of High-Dimensional Categorical Data Such as SNP Data
+  * [sctransform-0.2.0](https://cran.r-project.org/web/packages/sctransform/index.html) Variance Stabilizing Transformations for Single Cell UMI Data
   * [seewave-2.1.3](https://cran.r-project.org/web/packages/seewave/index.html) Sound Analysis and Synthesis
   * [segmented-1.0-0](https://cran.r-project.org/web/packages/segmented/index.html) Regression Models with Break-Points / Change-Points Estimation
   * [selectr-0.4-1](https://cran.r-project.org/web/packages/selectr/index.html) Translate CSS Selectors to XPath Expressions
@@ -994,6 +1018,8 @@ Analysis for Bayesian Models
   * [sigaR-1.32.0](https://www.bioconductor.org/packages/release/bioc/html/sigaR.html) Statistics for Integrative Genomics Analyses in R
   * [siggenes-1.58.0](https://www.bioconductor.org/packages/release/bioc/html/siggenes.html) Multiple Testing using SAM and Efron's Empirical Bayes Approaches
   * [signal-0.7-6](https://cran.r-project.org/web/packages/signal/index.html) Signal Processing
+  * [sitmo-2.0.1](https://cran.r-project.org/web/packages/sitmo/index.html) Parallel Pseudo Random Number Generator (PPRNG) 'sitmo' Header
+Files
   * [slam-0.1-45](https://cran.r-project.org/web/packages/slam/index.html) Sparse Lightweight Arrays and Matrices
   * [sm-2.2-5.6](https://cran.r-project.org/web/packages/sm/index.html) Smoothing Methods for Nonparametric Regression and Density
 Estimation
@@ -1016,7 +1042,8 @@ Estimation
   * [spatstat-1.60-1](https://cran.r-project.org/web/packages/spatstat/index.html) Spatial Point Pattern Analysis, Model-Fitting, Simulation, Tests
   * [spatstat.data-1.4-0](https://cran.r-project.org/web/packages/spatstat.data/index.html) Datasets for 'spatstat'
   * [spatstat.utils-1.13-0](https://cran.r-project.org/web/packages/spatstat.utils/index.html) Utility Functions for 'spatstat'
-  * [spdep-1.1-2](https://cran.r-project.org/web/packages/spdep/index.html) Spatial Dependence: Weighting Schemes, Statistics and Models
+  * [spdep-1.1-2](https://cran.r-project.org/web/packages/spdep/index.html) Spatial Dependence: Weighting Schemes, Statistics
+  * [speedglm-0.3-2](https://cran.r-project.org/web/packages/speedglm/index.html) Fitting Linear and Generalized Linear Models to Large Data Sets
   * splines built in
   * [sqldf-0.4-11](https://cran.r-project.org/web/packages/sqldf/index.html) Manipulate R Data Frames Using SQL
   * [ssgraph-1.8](https://cran.r-project.org/web/packages/ssgraph/index.html) Bayesian Graphical Estimation using Spike-and-Slab Priors
@@ -1056,7 +1083,7 @@ Exponential-Family Random Graph Models
   * [tidymodels-0.0.2](https://cran.r-project.org/web/packages/tidymodels/index.html) Easily Install and Load the 'Tidymodels' Packages
   * [tidyposterior-0.0.2](https://cran.r-project.org/web/packages/tidyposterior/index.html) Bayesian Analysis to Compare Models using Resampling Statistics
   * [tidypredict-0.3.0](https://cran.r-project.org/web/packages/tidypredict/index.html) Run Predictions Inside the Database
-  * [tidyr-0.8.3](https://cran.r-project.org/web/packages/tidyr/index.html) Easily Tidy Data with 'spread()' and 'gather()' Functions
+  * [tidyr-0.8.3](https://cran.r-project.org/web/packages/tidyr/index.html) Tidy Messy Data
   * [tidyselect-0.2.5](https://cran.r-project.org/web/packages/tidyselect/index.html) Select from a Set of Strings
   * [tidytext-0.2.1](https://cran.r-project.org/web/packages/tidytext/index.html) Text Mining using 'dplyr', 'ggplot2', and Other Tidy Tools
   * [tidytree-0.2.4](https://cran.r-project.org/web/packages/tidytree/index.html) A Tidy Tool for Phylogenetic Tree Data Manipulation
@@ -1100,6 +1127,8 @@ Exponential-Family Random Graph Models
   * [utf8-1.1.4](https://cran.r-project.org/web/packages/utf8/index.html) Unicode Text Processing
   * utils built in
   * [uuid-0.1-2](https://cran.r-project.org/web/packages/uuid/index.html) Tools for generating and handling of UUIDs
+  * [uwot-0.1.3](https://cran.r-project.org/web/packages/uwot/index.html) The Uniform Manifold Approximation and Projection (UMAP) Method
+for Dimensionality Reduction
   * [vcd-1.4-4](https://cran.r-project.org/web/packages/vcd/index.html) Visualizing Categorical Data
   * [vcfR-1.8.0](https://cran.r-project.org/web/packages/vcfR/index.html) Manipulate and Visualize VCF Data
   * [vctrs-0.1.0](https://cran.r-project.org/web/packages/vctrs/index.html) Vector Helpers
@@ -1117,7 +1146,7 @@ Signal Processing
   * [wavethresh-4.6.8](https://cran.r-project.org/web/packages/wavethresh/index.html) Wavelets Statistics and Transforms
   * [webp-1.0](https://cran.r-project.org/web/packages/webp/index.html) A New Format for Lossless and Lossy Image Compression
   * [webshot-0.5.1](https://cran.r-project.org/web/packages/webshot/index.html) Take Screenshots of Web Pages
-  * [whisker-0.3-2](https://cran.r-project.org/web/packages/whisker/index.html) {{mustache}} for R, logicless templating
+  * [whisker-0.3-2](https://cran.r-project.org/web/packages/whisker/index.html) {{mustache}} for R, Logicless Templating
   * [widgetTools-1.62.0](https://www.bioconductor.org/packages/release/bioc/html/widgetTools.html) Creates an interactive tcltk widget
   * [wikitaxa-0.3.0](https://cran.r-project.org/web/packages/wikitaxa/index.html) Taxonomic Information from 'Wikipedia'
   * [withr-2.1.2](https://cran.r-project.org/web/packages/withr/index.html) Run Code 'With' Temporarily Modified Global State
