--- a/docs/_updates/2019-11-01-medaka.md
+++ b/docs/_updates/2019-11-01-medaka.md
@@ -1,7 +1,7 @@
 ---
 title: medaka-0.10.0
 ---
-
+Medaka is a tool to create a consensus sequence of nanopore sequencing data.
 
 Project Homepage: [medaka](https://nanoporetech.github.io/medaka)
 
