--- a/docs/_updates/2020-10-27-Giotto.md
+++ b/docs/_updates/2020-10-27-Giotto.md
@@ -1,8 +1,9 @@
 ---
 title: Giotto-1.0.0
 ---
-##Giotto
-![Giotto Logo](images/logos/Giotto.png)
+
+## Giotto
+![Giotto Logo](/images/logos/Giotto.png)
 
 The Giotto package consists of two modules, Giotto Analyzer and Viewer, which provide tools to process, analyze and visualize single-cell spatial expression data.
 
