Giotto documentation with logo

--- a/docs/_updates/2020-10-27-Giotto.md
+++ b/docs/_updates/2020-10-27-Giotto.md
@@ -2,7 +2,7 @@
 title: Giotto-1.0.0
 ---
 
-![Giotto Logo](/docs/assets/images/logos/Giotto.png)
+![Giotto Logo](https://github.com/FredHutch/easybuild-life-sciences/docs/assets/images/logos/Giotto.png)
 
 The Giotto package consists of two modules, Giotto Analyzer and Viewer, which provide tools to process, analyze and visualize single-cell spatial expression data.
 
