--- a/docs/_updates/2020-10-27-Giotto.md
+++ b/docs/_updates/2020-10-27-Giotto.md
@@ -1,12 +1,12 @@
 ---
 title: Giotto-1.0.0
 ---
-
-![Giotto Logo](https://github.com/FredHutch/easybuild-life-sciences/docs/assets/images/logos/Giotto.png)
-
 The Giotto package consists of two modules, Giotto Analyzer and Viewer, which provide tools to process, analyze and visualize single-cell spatial expression data.
 
 Project Homepage: [Giotto](https://rubd.github.io/Giotto_site/)
+
+![Giotto Logo](https://github.com/FredHutch/easybuild-life-sciences/blob/master/docs/assets/images/logos/Giotto.png?raw=true)
+
 
 Usage:
 ```
