--- a/docs/_updates/2020-12-03-factera.md
+++ b/docs/_updates/2020-12-03-factera.md
@@ -1,7 +1,8 @@
 ---
 title: factera-1.4.4
 ---
-# name homepage toolchain sources dependencies sanity_check_paths modextrapaths modloadmsg moduleclass
+(Fusion And Chromosomal Translocation Enumeration and Recovery Algorithm) is a tool
+ for detection of genomic fusions in paired-end targeted (or genome-wide) sequencing data.
 
 Project Homepage: [factera](https://factera.stanford.edu/)
 
