--- a/docs/_updates/2021-08-29-PLINK2.md
+++ b/docs/_updates/2021-08-29-PLINK2.md
@@ -5,7 +5,7 @@ PLINK2 is a free, open-source whole genome association analysis toolset, designe
  perform a range of basic, large-scale analyses in a computationally efficient manner.
  The focus of PLINK2 is purely on analysis of genotype/phenotype data.
 
-**** Recent version history
+#### Recent version history
 
 - 26 Aug 2021: --pmerge-list concatenation-job detector no longer misses concatenation jobs where adjacent input files have same-position variants but those variants are always sorted by ID. --dummy can now generate phased data.
 
