--- a/docs/_updates/2021-11-04-jax.md
+++ b/docs/_updates/2021-11-04-jax.md
@@ -1,7 +1,7 @@
 ---
 title: jax-0.2.19
 ---
-Composable transformations of Python+NumPy programs: 
+Composable transformations of Python+NumPy programs, 
 differentiate, vectorize, JIT to GPU/TPU, and more
 
 Project Homepage: [jax](https://pypi.python.org/pypi/jax)
